--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "e67f3e0e-e319-4e6a-90db-462f780913e2"
 authors = ["Finn Süberkrüb"]
 version = "1.0.0-DEV"
 
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1"
 
