--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Vicon"
 uuid = "e67f3e0e-e319-4e6a-90db-462f780913e2"
 authors = ["Finn Süberkrüb"]
-version = "1.0.0-DEV"
+version = "1.0.0"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
