--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Vicon"
+name = "ViconUDP"
 uuid = "e67f3e0e-e319-4e6a-90db-462f780913e2"
 authors = ["Finn Süberkrüb"]
 version = "1.0.0"
@@ -12,6 +12,8 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 julia = "1"
+Documenter = "0.27.24"
+Rotations = "1.5.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
